syntax = "proto3";

option csharp_namespace = "LoggingService.Api.Grpc";

package logging.v1;

import "google/protobuf/timestamp.proto";

service LoggingService {
    rpc IngestLog(IngestLogRequest) returns (IngestLogResponse);
    rpc IngestLogBatch(IngestLogBatchRequest) returns (IngestLogBatchResponse);
    rpc QueryLogs(QueryLogsRequest) returns (QueryLogsResponse);
    rpc StreamLogs(StreamLogsRequest) returns (stream LogEntryMessage);
}

message LogEntryMessage {
    string id = 1;
    google.protobuf.Timestamp timestamp = 2;
    string correlation_id = 3;
    string service_id = 4;
    LogLevel level = 5;
    string message = 6;
    optional string trace_id = 7;
    optional string span_id = 8;
    optional string user_id = 9;
    optional string request_id = 10;
    optional string method = 11;
    optional string path = 12;
    optional int32 status_code = 13;
    optional int64 duration_ms = 14;
    map<string, string> metadata = 15;
    optional ExceptionInfoMessage exception = 16;
}

enum LogLevel {
    LOG_LEVEL_UNSPECIFIED = 0;
    LOG_LEVEL_DEBUG = 1;
    LOG_LEVEL_INFO = 2;
    LOG_LEVEL_WARN = 3;
    LOG_LEVEL_ERROR = 4;
    LOG_LEVEL_FATAL = 5;
}

message ExceptionInfoMessage {
    string type = 1;
    string message = 2;
    optional string stack_trace = 3;
    optional ExceptionInfoMessage inner_exception = 4;
}

message IngestLogRequest {
    LogEntryMessage entry = 1;
}

message IngestLogResponse {
    bool success = 1;
    string id = 2;
    repeated FieldErrorMessage errors = 3;
}

message IngestLogBatchRequest {
    repeated LogEntryMessage entries = 1;
}

message IngestLogBatchResponse {
    int32 accepted_count = 1;
    int32 rejected_count = 2;
    repeated IngestLogResponse results = 3;
}

message QueryLogsRequest {
    optional google.protobuf.Timestamp start_time = 1;
    optional google.protobuf.Timestamp end_time = 2;
    optional string service_id = 3;
    optional LogLevel min_level = 4;
    optional string correlation_id = 5;
    optional string search_text = 6;
    int32 page = 7;
    int32 page_size = 8;
    SortDirection sort_direction = 9;
}

message QueryLogsResponse {
    repeated LogEntryMessage items = 1;
    int32 total_count = 2;
    int32 page = 3;
    int32 page_size = 4;
    bool has_more = 5;
}

message StreamLogsRequest {
    optional string service_id = 1;
    optional LogLevel min_level = 2;
}

message FieldErrorMessage {
    string field = 1;
    string code = 2;
    string message = 3;
}

enum SortDirection {
    SORT_DIRECTION_UNSPECIFIED = 0;
    SORT_DIRECTION_ASCENDING = 1;
    SORT_DIRECTION_DESCENDING = 2;
}
